@@ -79,6 +79,8 @@ v0.0.4 Closed-Beta:
 52)  Added 2019.3.6f1 Unity Dependencies.
 53)  Fixed Internal Failure issues with RotMG Exalt and Unity 2019.3.6f1.
 54)  Fixed Internal Failure issues with Pistol Whip and Unity 2019.2.0f1.
+55)  Fixed issue with MelonLoader.ModHandler complaining about Mod Libraries.
+56)  Fixed issue with MelonCoroutines processing a yield of null as the same as WaitForFixedUpdate.
 
 ---
 
